fix(SendTransactions): use component to fix broken style

--- a/src/components/SendTransaction/SendTransaction.scss
+++ b/src/components/SendTransaction/SendTransaction.scss
@@ -216,7 +216,6 @@ $titleBar-height: 90px;
 }
 
 #sendTransaction .actions button {
-    background-color: rgb(128, 255, 219);
     width: 45%;
     margin: 2em 2.5% 0em;
     text-transform: uppercase;
@@ -273,9 +272,14 @@ $titleBar-height: 90px;
 }
 
 #sendTransaction input {
-    border-bottom: 2px solid #b3c4e6;
-    margin: 6px;
+    box-shadow: 0 2px 0 #b3c4e6;
     color: white;
+    background-color: transparent;
+}
+
+#sendTransaction .text-input {
+    margin: 6px;
+    display: inline-block;
     width: 47%;
 }
 
